agregue el logo centrado

--- a/css/style.css
+++ b/css/style.css
@@ -52,5 +52,6 @@ li:hover{
 a{color: black;font-size: 7px;
             padding: 1px;margin: 1px;}
             .logoadr{align-items: center;}
+            .logoadr2{align-items: center;}
     
 }
