--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,15 @@ display: flex; justify-content: center;}
 .adr{font-size: 35px; font-family: 'Poppins', sans-serif;
 display: flex;justify-content: center;}
 
-.main{background-color:burlywood ;
+.mainIndex, .gridcontacto{background-color:burlywood ;
     margin: 20px;
     padding: 0px;}
+
+.m20{margin: 20px;}
+
+form{display: flex; flex-direction: column;}
+
+h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
 
 li:hover{
     color: rgb(3, 3, 85);
@@ -51,6 +57,24 @@ footer{display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     align-content: center;;}
+
+    .gridcontacto{
+        display: grid;
+        grid-template-areas: 
+        "encabezado encabezado"
+        "form infoContacto" 
+        "form  iframe";
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto auto;
+    }
+    
+    .encabezadoContacto{grid-area: encabezado;}
+    .form{grid-area: form;}
+    .infoContacto{grid-area: infoContacto;}
+    .iframe{grid-area: iframe;}
+    h1{text-align: center;color: brown;}
+    
+
 }
 
 /* MOBILE */
@@ -65,11 +89,15 @@ a{color: black;font-size: 7px;
             .logoadr2{align-items: center;}
 
             
-main{display: flex;
+.mainIndex{display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-left: 0;}
 .Bienvenidos{font-size: 20px;}
+
+.gridcontacto{display: grid;
+    grid-template-columns: 100%;
+grid-template-rows: auto auto auto auto;}
    
 }
 
