--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,7 @@ footer{display: flex;
         align-items: center;
         justify-content: space-between;}
         ul{display: flex; align-items: center; }
-a{color: black;font-size: 7px;
-            padding: 1px;margin: 1px;}
+        a{color: black;font-size: 7px; padding: 1px; margin: 1px;}
 
             .logoadr{display: flex; align-items: center;}
 
