--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,13 @@ footer{display: flex;
     .iframe{grid-area: iframe;}
     
     .nosotros1{width: 100%; height: 400px;}
-
+    .tituloNos{font-size: 70px; color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: burlywood;
+        display: flex; justify-content: center;
+        }
 }
+
 
 /* MOBILE */
 
