--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
 
 .ig{width: 50%;height: auto;}
 
-.inicioadr{width: 100%;height: auto; 
+.inicioadr{width: 100%;height: 900px; 
 display: flex; justify-content: center; border-radius: 10px;}
 
 .Bienvenidos{font-size: 50px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -58,7 +58,7 @@ footer{display: flex;
     flex-direction: row; 
     justify-content: space-around;
     flex-wrap: wrap;
-    align-content: center;;}
+    align-content: center;}
 
     .gridcontacto{
         display: grid;
