--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,14 @@ footer{display: flex;
 
             .logoadr{display: flex; align-items: center;}
 
-            .logoadr2{display: flex; padding: 2%;
-                 align-items: center; 
-                 width: 60%;}
+            .logoadr2{display: block; 
+                margin-left: auto;
+                 margin-right: auto;
+                 width: 60%;padding: 2%;}
 
-            .ig{width: 30%;display: flex; 
-                flex-direction: column;
-                align-items: center;
-                }
+            .ig{width: 30%;display: block; 
+                margin-left: auto;
+                margin-right: auto; }
             
 .mainIndex{display: flex;
     flex-wrap: wrap;
