--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ li{list-style-type: none ; padding: 10px;margin: 10px;}
 a{text-decoration: none;color: black; font-size: 20px;}
 
 header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: bisque;
-}
+    background-color: bisque;}
 
 .rrss, .contacto{font-size: 20px; color: brown;}
 
@@ -34,11 +33,20 @@ display: flex;justify-content: center;}
 
 .m20{margin: 20px;}
 
+.p20{padding: 20px;}
+
 h1{text-align: center;color: brown;}
 
 form{display: flex; flex-direction: column;}
 
 h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
+
+.p{font-size: 30px; 
+    font-family: Arial, Helvetica, sans-serif;
+   
+}
+
+
 
 li:hover{
     color: rgb(3, 3, 85);
@@ -75,35 +83,41 @@ footer{display: flex;
     .infoContacto{grid-area: infoContacto;}
     .iframe{grid-area: iframe;}
     
-    .nosotros1{width: 100%; height: 400px;}
+    .nosotros1{width: 100%; height: 400px; padding: 5px;}
+
     .tituloNos{font-size: 70px; color: black;
         font-family: Arial, Helvetica, sans-serif;
-        background-color: burlywood;
         display: flex; justify-content: center;
-        }
+        padding: 20px;}
+
+    .imgTexto, .imgTexto2{width: 100%;height: auto; border-radius: 20px; 
+        padding: 10px;}
+
 }
 
 
 /* MOBILE */
 
 @media(max-width:768px){
-    .encabezado, .rrss,.contacto {display: flex; padding: 20px;
+.encabezado, .rrss,.contacto {display: flex; padding: 20px;
         flex-direction: column; 
         align-items: center;
         justify-content: space-between;}
-        ul{display: flex; align-items: center; }
-        a{color: black;font-size: 7px; padding: 1px; margin: 1px;}
+    ul{display: flex; align-items: center; }
+     a{color: black;font-size: 7px; padding: 1px; margin: 1px;}
 
-            .logoadr{display: flex; align-items: center;}
+    .logoadr{display: flex; align-items: center;}
 
-            .logoadr2{display: block; 
+    .logoadr2{display: block; 
                 margin-left: auto;
                  margin-right: auto;
                  width: 60%;padding: 2%;}
 
-            .ig{width: 30%;display: block; 
+    .ig{width: 30%;display: block; 
                 margin-left: auto;
                 margin-right: auto; }
+
+            
             
 .mainIndex{display: flex;
     flex-wrap: wrap;
