modifique tamaño de fuente en mobile

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ footer{display: flex;
         align-items: center;
         justify-content: space-between;}
     ul{display: flex; align-items: center; }
-     a{color: black;font-size: 7px; padding: 1px; margin: 1px;}
+     a{color: black;font-size: 10px; }
 
     .logoadr{display: flex; align-items: center;}
 
