--- a/css/style.css
+++ b/css/style.css
@@ -51,17 +51,14 @@ form{display: flex; flex-direction: column;}
 h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
 
 .p{font-size: 30px; 
-    font-family: Arial, Helvetica, sans-serif;
-   
-}
+    font-family: Arial, Helvetica, sans-serif;}
 
 li:hover{
     color: rgb(3, 3, 85);
     font-size: 20px;
     background-color: rgb(248, 143, 5);
     padding: 10px;
-    border-radius: 20px;  
-}
+    border-radius: 20px;}
 
 .bgPrincipal{background-color: rgb(204, 204, 241);}
 
@@ -107,8 +104,7 @@ footer{display: flex;
     .parrafoIzq{grid-area: pIzq;}
     .imgTexto{grid-area: imgTexto;}
     .parrafoDer{grid-area: pDer;}
-    .imgTexto2{grid-area: imgTexto2;}
-}
+    .imgTexto2{grid-area: imgTexto2;}}
 
 
 /* MOBILE */
@@ -145,7 +141,4 @@ grid-template-rows: auto auto auto auto;}
 
 .gridmainNos{display:grid;
 grid-template-columns: 100%;
-grid-template-rows: auto auto auto auto;}
-   
-}
-
+grid-template-rows: auto auto auto auto;}}
