--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,8 @@ footer{display: flex;
     .ig{width: 30%;display: block; 
                 margin-left: auto;
                 margin-right: auto; }
-
+                
+.titulonos{font-size: 50px;}
                       
 .mainIndex{display: flex;
     flex-wrap: wrap;
