--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ footer{display: flex;
                 margin-left: auto;
                 margin-right: auto; }
 
-.titulonos{font-size: 20px;}
+.tituloNos{font-size: 50px;}
                       
 .mainIndex{display: flex;
     flex-wrap: wrap;
