--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,19 @@ footer{display: flex;
 /* MOBILE */
 
 @media(max-width:768px){
-.encabezado, .rrss,.contacto {display: flex; padding: 20px;
+.rrss,.contacto {display: flex; padding: 20px;
         flex-direction: column; 
         align-items: center;
         justify-content: space-between;}
-    ul{display: flex; align-items: center; }
+
+.encabezado{display: flex;
+    flex-direction: column; 
+    align-items: center;
+    padding: 20px;}
+
+    .Principal{display:flex; align-items: center;}
+    
+
      a{color: black;font-size: 10px; }
 
     .logoadr{display: flex; align-items: center;}
