--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,11 @@ footer{display: flex;
         align-items: center;
         justify-content: space-between;}
 
-.encabezado{display: flex;
-    flex-direction: column; 
+.encabezado{display: flex; flex-direction: column;
     align-items: center;
     padding: 20px;}
 
-    .Principal{display:flex; align-items: center;}
+    .Principal{display:flex; align-items: center; padding: 0; margin: 0;}
     
 
      a{color: black;font-size: 10px; }
