--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,6 @@
 
 li{display: inline;}
 
-li{list-style-type: none ; padding: 10px;margin: 10px;}
-
 a{text-decoration: none;color: black; font-size: 20px;}
 
 header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -58,13 +56,6 @@ h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
 .p{font-size: 30px; 
     font-family: Arial, Helvetica, sans-serif;}
 
-li:hover{
-    color: rgb(3, 3, 85);
-    font-size: 20px;
-    background-color: rgb(248, 143, 5);
-    padding: 10px;
-    border-radius: 20px;}
-
 .bgPrincipal{background-color: rgb(204, 204, 241);}
 
 .imgfluid{width: 100%; height: auto;}
@@ -80,6 +71,15 @@ li:hover{
     flex-direction: row;
     justify-content: space-between;}
 
+    li{list-style-type: none ; padding: 10px;margin: 10px;}
+
+    li:hover{
+        color: rgb(3, 3, 85);
+        font-size: 20px;
+        background-color: rgb(248, 143, 5);
+        padding: 10px;
+        border-radius: 20px;}
+    
 footer{display: flex;
     flex-direction: row; 
     justify-content: space-around;
@@ -145,15 +145,22 @@ footer{display: flex;
         justify-content: space-between;}
 
 .encabezado{display: flex; flex-direction: column;
-    align-items: center;
-    padding: 20px;}
+   justify-content: center;align-items: center; padding: 20px;}
 
-    .Principal{display:flex; align-items: center; padding: 0; margin: 0;}
+.Principal{display: grid; grid-template-columns:repeat(5) 1fr;
+    padding: auto; margin: auto;}
     
+    li{list-style-type: none ; padding: 1;margin: 1px; display: flex; 
+        justify-content: center;}
+
+li:hover{
+    color: rgb(3, 3, 85);
+    font-size: 20px;
+    background-color: rgb(248, 143, 5);
+    border-radius: 20px;}
 
      a{color: black;font-size: 10px; }
 
-    .logoadr{display: flex; align-items: center;}
 
     .logoadr2{display: block; 
                 margin-left: auto;
