--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,6 @@
     display: flex; justify-content: center;
      padding: 20px;}
 
-li{display: inline;}
-
-a{text-decoration: none;color: black; font-size: 20px;}
-
 header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: bisque;}
 
@@ -72,6 +68,10 @@ h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
     justify-content: space-between;}
 
     li{list-style-type: none ; padding: 10px;margin: 10px;}
+
+    li{display: inline;}
+
+    a{text-decoration: none;color: black; font-size: 20px;}
 
     li:hover{
         color: rgb(3, 3, 85);
@@ -135,7 +135,6 @@ footer{display: flex;
         
     
 
-
 /* MOBILE */
 
 @media(max-width:768px){
@@ -144,14 +143,16 @@ footer{display: flex;
         align-items: center;
         justify-content: space-between;}
 
-.encabezado{display: flex; flex-direction: column;
-   justify-content: center;align-items: center; padding: 20px;}
+.encabezado{display: block; margin-left: auto; margin-right: auto;}
 
 .Principal{display: grid; grid-template-columns:repeat(5) 1fr;
-    padding: auto; margin: auto;}
+    padding: 0px; margin:0px;}
     
-    li{list-style-type: none ; padding: 1;margin: 1px; display: flex; 
+    li{list-style-type: none ; padding: 3px;margin: 3px; display: flex; 
         justify-content: center;}
+
+ a{text-decoration: none;color: black; 
+    font-size: 10px;}
 
 li:hover{
     color: rgb(3, 3, 85);
