--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-.logoadr{width: 25%; height: auto;}
+.logoadr{width: 30%; height: auto; }
 
 .logoadr2{width: 50%;height: auto;}
 
@@ -24,7 +24,7 @@ header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
 
 .mail,.num{color: black;}
 
-.ig{width: 50%;height: auto;}
+.ig{width: 50%;height: auto; border-radius: 10px;}
 
 .inicioadr{width: 100%;height: 900px; 
 display: flex; justify-content: center; border-radius: 10px;}
@@ -145,9 +145,9 @@ footer{display: flex;
         align-items: center;
         justify-content: space-between;}
 
-.encabezado{display: block; 
-    margin-left: auto;
-     margin-right: auto;}
+.encabezado{display: flex; justify-content: center;}
+
+
 
 .Principal{display: grid; grid-template-columns:repeat(5) 1fr;
     padding: 0px; margin:0px;}
