--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     display: flex; justify-content: center;
     padding: 20px;}
 
-    .tituloProdu{font-size: 40px; color: black;
+    .tituloProdu, .tituloServ{font-size: 40px; color: black;
     font-family: Arial, Helvetica, sans-serif;
     display: flex; justify-content: center;
      padding: 20px;}
@@ -52,16 +52,18 @@ h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
 .p{font-size: 30px; 
     font-family: Arial, Helvetica, sans-serif; text-align: center;}
 
+.p2{font-family: 'Times New Roman', Times, serif; text-align: center;}
+
 .bgPrincipal{background-color: rgb(204, 204, 241);}
 
-.imgfluid{width: 100%; height: auto;}
+.imgfluid{width: 100%; height: auto; border-radius: 10px;}
 
-.prod{background-color: rgb(84, 74, 121);padding: 5px;
+.prod,.serv{background-color: rgb(84, 74, 121);padding: 5px;
     margin: 10px;border-radius: 20px;}
 
-    .tituloProdu,.gridmainProdu{padding: auto;margin: auto;}
-
-  .h9{ display: flex; justify-content: center;}
+    .tituloProdu,.gridmainProdu, .tituloServ{padding: auto;margin: auto;}
+ 
+  .h9,.h10{ display: flex; justify-content: center;}
 
 /* DESKTOP*/
 
@@ -134,6 +136,23 @@ footer{display: flex;
         {grid-area: tituloProdu;}
         .prodA{grid-area:prodA;}
         .prodB{grid-area:prodB;}
+        
+
+
+        
+    .gridmainServ{
+        display: grid;
+        grid-template-areas: 
+        "servA servB";
+       
+        grid-template-columns: 25% 25%;
+        grid-template-rows: auto auto;
+        justify-content: center;}
+        
+        .gridmainServ
+        {grid-area: tituloServ;}
+        .servA{grid-area:servA;}
+        .servB{grid-area:servB;}
         
     
 
