--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .logoadr{width: 30%; height: auto; }
 
-.logoadr2{width: 50%;height: auto;}
+.logoadr2{width: 50%;height: auto; border-radius: 15px;}
 
 .nosotros1{width: 100%; height: 400px;}
 
@@ -26,14 +26,9 @@ header, footer{ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman',
 
 .ig{width: 50%;height: auto; border-radius: 10px;}
 
-.inicioadr{width: 100%;height: 900px; 
-display: flex; justify-content: center; border-radius: 10px;}
-
 .Bienvenidos{font-size: 50px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;justify-content: center;}
 
-.adr{font-size: 35px; font-family: 'Poppins', sans-serif;
-display: flex;justify-content: center;}
 
 .mainIndex, .gridcontacto{background-color:burlywood ;
     margin: 20px;
@@ -76,6 +71,13 @@ h5, h6 {font-size: 20px;font-family: Arial, Helvetica, sans-serif;}
     li{display: inline;}
 
     a{text-decoration: none;color: black; font-size: 20px;}
+
+
+    .adr{font-size: 35px; font-family: 'Poppins', sans-serif;
+        display: flex;justify-content: center;}
+
+        .inicioadr{width: 100%;height: 900px; 
+            display: flex; justify-content: center; border-radius: 10px;}
 
     li:hover{
         color: rgb(3, 3, 85);
@@ -166,7 +168,11 @@ footer{display: flex;
 
 .encabezado{display: flex; justify-content: center;}
 
+.adr{font-size: 27px; font-family: 'Poppins', sans-serif;
+    display: flex;justify-content: center;}
 
+    .inicioadr{width: 100%;height: auto; 
+        display: flex; justify-content: center; border-radius: 10px;}
 
 .Principal{display: grid; grid-template-columns:repeat(5) 1fr;
     padding: 0px; margin:0px;}
